--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,11 @@ body {
   margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
-/* .navbar-brand {
-  background-image: url('../images/partlycloudy.gif');
-  background-repeat: no-repeat;
-  width: 100px;
-  margin: auto 0;
-} */
-
 .fa-layers-text {
   font-size: 12px;
   text-align: center;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -26,4 +20,13 @@ body {
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
+}
+
+#alerts {
+  font-weight: bold;
+  color: tomato;
+}
+
+#weather-image {
+  margin: auto;
 }
