implemented detail alerts page (#13)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,9 +29,24 @@ div {
   font-weight: bold;
   color: tomato;
 }
+.alert-title {
+  font-weight: bold;
+  color: tomato;
+  margin-top: 10px;
+  margin-bottom: 8px;
+}
+.alert-line {
+  margin-top: 0;
+  margin-bottom: 5px;
+  padding: 0;
+  line-height: 1.3;
+}
 .no-alert {
   font-weight: normal;
   color: black;
+}
+.page-title {
+  margin: 10px auto auto 10px;
 }
 #alerts {
   margin: 0;
