--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,3 +61,12 @@ div {
 #five-day {
   margin-top: 25px;
 }
+.radar-location {
+  margin-top: 25px;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+.radar-image {
+  margin-right: auto;
+  margin-left: auto;
+}
