--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,3 +76,17 @@ div {
 .normal {
   cursor: default;
 }
+.rotate-90 {
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+}
+.planner-chart {
+  border: 1px solid #D8D8D8;
+  height: 300px;
+  width: 480px;
+  /* padding:  0; */
+  margin-top: 100px;
+  margin-bottom: -50px;
+  margin-left: -70px;
+  margin-right: 10px;
+}
