--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,11 +82,11 @@ div {
 }
 .planner-chart {
   border: 1px solid #D8D8D8;
+  box-sizing: content-box;
   height: 300px;
-  width: 480px;
-  /* padding:  0; */
+  width: 400px;
   margin-top: 100px;
-  margin-bottom: -50px;
-  margin-left: -70px;
-  margin-right: 10px;
+  margin-bottom: auto;
+  margin-left: -45px;
+  margin-right: auto;
 }
